# app-iiwa

./: .coverage 2  .flake8  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_old.md  RELEASE_GUIDE.md  create_icon.py  pyproject.toml  run.py  start.sh
.github/workflows/: ci.yml
assets/: app_icon.txt
dist_exe/App-IIWA.app/Contents/: Info.plist
dist_exe/App-IIWA.app/Contents/Resources/: generated-3fdac384342fb77b03e210e72710937608a0d87792143925fd63cf7974339dfd.icns
dist_exe/App-IIWA.app/Contents/_CodeSignature/: CodeResources
scripts/: build.py  build_executables.py  generate_icons.py
src/app_iiwa/: __init__.py  __main__.py  app.py  splash.py
tests/: __init__.py  test_basic.py
