[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-iiwa"
version = "2.0.0"
description = "Aplicación Unificada para Procesamiento de Padrones - Combina CAMPO y CAJA"
authors = [
    {name = "Sistema IIWA", email = "iiwa@sistema.mx"}
]
maintainers = [
    {name = "Sistema IIWA", email = "iiwa@sistema.mx"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["padrones", "agua", "caja", "campo", "excel", "gui", "tkinter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "Pillow>=10.0.0",
    "tcl>=0.2",
]

[project.urls]
Homepage = "https://github.com/yosesotomayor/app-iiwa"
Repository = "https://github.com/yosesotomayor/app-iiwa"
Issues = "https://github.com/yosesotomayor/app-iiwa/issues"
Documentation = "https://github.com/yosesotomayor/app-iiwa#readme"
Changelog = "https://github.com/yosesotomayor/app-iiwa/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
build = [
    "build>=0.10.0",
    "twine>=4.0.0",
    "hatchling>=1.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
app-iiwa = "app_iiwa:main"

[project.gui-scripts]
app-iiwa-gui = "app_iiwa:main"

[tool.hatch.build.targets.wheel]
packages = ["src/app_iiwa"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.hatch.version]
path = "src/app_iiwa/__init__.py"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app_iiwa --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["src/app_iiwa"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
build = [
    "pyinstaller>=6.16.0",
]
dev = [
    "autopep8>=2.3.2",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
